--- a/11.05/package.json
+++ b/11.05/package.json
@@ -18,7 +18,9 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.4",
     "firebase": "^8.5.0",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
