--- a/final_new/package.json
+++ b/final_new/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack serve --mode development --open",
-    "dev": "webpack"
+    "start": "webpack serve --mode development --open",
+    "dev": "webpack --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "image-webpack-loader": "^7.0.1",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
